从csdn搬家和部分笔记整理