@@ -1,8 +1,8 @@
 ---
 layout    : post
 title     : "《深入理解Java虚拟机_JVM高级特性与最佳实践 第2版》读书笔记"
-date      : 2010-10-03
-lastupdate: 2010-10-03
+date      : 2019-10-03
+lastupdate: 2019-10-03
 categories: java
 ---
 
@@ -140,3 +140,92 @@ CAS操作在对象头标记，代表获得锁
 先使用cas获取锁对象；如果存在两个以上线程争用同一个锁，则升级为重量级锁，阻塞线程。绝大数锁在同步周期内不存在竞争。
 5. 偏向锁
 如果在第一个获取锁的线程在执行过程中不存在竞争，那就不同步了；否则转为轻量锁
+
+
+
+
+
+# 实战：下面是一段 jvm 运行参数，对其进行解释
+
+```
+ENV JAVA_OPT_MEMORY="-Xms512m -Xmx512m -Xmn386m -XX:MetaspaceSize=386m -XX:MaxMetaspaceSize=256m"
+ENV JAVA_OPT_JVM="-XX:ActiveProcessorCount=1 \
+      -XX:ParallelGCThreads=4 -XX:+PrintFlagsFinal -XX:SurvivorRatio=4 \
+      -XX:TargetSurvivorRatio=70 -XX:+UseConcMarkSweepGC \
+      -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:+DisableExplicitGC \
+      -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 \
+      -XX:+CMSScavengeBeforeRemark -XX:+PrintGC -XX:+PrintGCDetails \
+      -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime \
+      -XX:+PrintFlagsFinal -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow \
+      -Xloggc:/app/${APP_NAME}/logs/gc.%t.log \
+      -XX:HeapDumpPath=/app/${APP_NAME}/logs/dump_core_pid.%t.hprof \
+      -XX:ErrorFile=/app/${APP_NAME}/logs/hs_err_pid.%t.log"
+```
+
+这些是Java的环境变量设置，主要用于配置Java虚拟机(JVM)的参数。下面是每个参数的解释：
+
+- `JAVA_OPT_MEMORY`：这个环境变量设置了Java堆内存的最小值(`-Xms512m`)和最大值(`-Xmx512m`)，以及新生代(`-Xmn386m`)和元空间(`-XX:MetaspaceSize=386m`和`-XX:MaxMetaspaceSize=256m`)的大小。
+- `JAVA_OPT_JVM`：这个环境变量包含了一系列的JVM参数，包括：
+  - `-XX:ActiveProcessorCount=1`：设置JVM可以使用的处理器数量。
+  - `-XX:ParallelGCThreads=4`：设置垃圾收集器的线程数量。
+  - `-XX:SurvivorRatio=4`和`-XX:TargetSurvivorRatio=70`：设置新生代中Eden区与Survivor区的比例，以及Survivor区的目标使用率。
+  - `-XX:+UseConcMarkSweepGC`和`-XX:+UseParNewGC`：启用CMS垃圾收集器和ParNew垃圾收集器。
+  - `-XX:+CMSClassUnloadingEnabled`：允许CMS垃圾收集器回收类加载器加载的类。
+  - `-XX:+UseCMSInitiatingOccupancyOnly`和`-XX:CMSInitiatingOccupancyFraction=70`：设置CMS垃圾收集器的启动阈值。
+  - `-XX:+PrintGC`，`-XX:+PrintGCDetails`，`-XX:+PrintGCDateStamps`，`-XX:+PrintGCTimeStamps`，`-XX:+PrintGCApplicationStoppedTime`：打印垃圾收集的相关信息。
+  - `-XX:+HeapDumpOnOutOfMemoryError`，`-Xloggc:/app/${APP_NAME}/logs/gc.%t.log`，`-XX:HeapDumpPath=/app/${APP_NAME}/logs/dump_core_pid.%t.hprof`，`-XX:ErrorFile=/app/${APP_NAME}/logs/hs_err_pid.%t.log`：设置在内存溢出时生成堆转储文件，以及设置垃圾收集日志，堆转储文件和错误文件的路径。
+
+这些参数可以帮助你更好地控制和监控Java应用程序的运行。但是，需要注意的是，这些参数的设置需要根据你的应用程序的实际需求来调整。不恰当的设置可能会对应用程序的性能产生负面影响。
+
+
+
+#### 如果是在docker 容器中部署，应该怎么设置
+
+- 在Docker容器中部署Java应用程序时，JVM参数的设置基本上与在物理机或虚拟机上的设置相同。但是，有一些特定的考虑因素需要注意：
+
+  1. **内存限制**：Docker容器的内存通常会被限制。因此，您需要确保JVM的最大堆大小（`-Xmx`）和元空间大小（`-XX:MaxMetaspaceSize`）的总和不超过Docker容器的内存限制。否则，可能会出现OutOfMemoryError。
+  2. **CPU限制**：如果Docker容器的CPU被限制，那么JVM可能无法准确地检测到可用的处理器数量。在这种情况下，您可能需要手动设置`-XX:ActiveProcessorCount`参数。
+  3. **内存和CPU的可见性**：在某些情况下，JVM可能无法准确地看到Docker容器的内存和CPU限制。为了解决这个问题，Java 10引入了一个新的参数`-XX:+UseContainerSupport`，它可以让JVM更好地理解容器的限制。在Java 8的更新版本中，这个参数也被加入了。
+  4. **垃圾收集器的选择**：在容器环境中，选择合适的垃圾收集器也很重要。例如，G1垃圾收集器在处理有限的内存资源时通常表现得比并发标记-清除（CMS）垃圾收集器更好。
+
+  以下是一个示例，展示了如何在Docker容器中设置JVM参数：
+
+  ```bash
+  ENV JAVA_OPT_MEMORY="-Xms1g -Xmx1g -Xmn512m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m"
+  ENV JAVA_OPT_JVM="-XX:ActiveProcessorCount=2 \
+        -XX:ParallelGCThreads=2 -XX:+PrintFlagsFinal -XX:SurvivorRatio=8 \
+        -XX:TargetSurvivorRatio=90 -XX:+UseG1GC \
+        -XX:+UseContainerSupport -XX:+DisableExplicitGC \
+        -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 \
+        -XX:+PrintGC -XX:+PrintGCDetails \
+        -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime \
+        -XX:+PrintFlagsFinal -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow \
+        -Xloggc:/app/${APP_NAME}/logs/gc.%t.log \
+        -XX:HeapDumpPath=/app/${APP_NAME}/logs/dump_core_pid.%t.hprof \
+        -XX:ErrorFile=/app/${APP_NAME}/logs/hs_err_pid.%t.log"
+  ```
+
+  在这个示例中，我们假设Docker容器的内存限制为2GB，CPU限制为2核。我们将堆内存的最小值和最大值都设置为1GB，新生代的大小设置为512MB，元空间的初始大小设置为256MB，最大大小设置为512MB。我们将JVM可以使用的处理器数量和垃圾收集器的线程数量都设置为2，启用了G1垃圾收集器和容器支持，并禁用了显式垃圾收集。
+
+  
+
+#### 为什么说“减少老年代的大小，从而减少Full GC的频率”？解释下原因
+
+在Java的内存管理中，堆内存被分为新生代和老年代两部分。新生代又被分为Eden区和两个Survivor区。*大部分新创建的对象都会被分配到**Eden**区，当Eden区满时，就会触发Minor GC，清理掉无用的对象，并将还在使用的对象移动到**Survivor**区，如果Survivor区也满了，就会将对象移动到**老年代**。当老年代满了，就会触发Full GC，这是一种全局的垃圾回收，会暂停所有的应用线程*，所以通常会比Minor GC耗时更长。
+
+因此，*如果我们减少老年代的大小，相应地增大新生代的大小，那么更多的对象会在新生代被清理掉，从而减少了对象进入老年代的数量，这样就可以减少老年代满的频率，从而减少Full GC的频率*。但是，这种做法也有可能导致新生代过早地满，从而增加Minor GC的频率，所以需要根据实际的应用情况来调整这两者的比例。这就是为什么我们说“减少老年代的大小，从而减少Full GC的频率”的原因。希望这个解释对你有所帮助！
+
+#### 元空间的作用
+
+元空间（Metaspace）是Java 8中引入的一个新的内存空间，用于替代之前版本中的永久代（PermGen）。元空间主要用于存储类的元数据，包括类的**名称、字段、方法和其他信息**。这些信息在类被加载到JVM时被创建，并在类被卸载时被删除。
+
+元空间的一个重要特性是，它并不在Java堆内存中，而是在本地内存（也就是操作系统的内存）中。这意味着元空间的大小不再受到Java堆大小的限制，而是**受到本地内存大小**的限制。这可以避免因为永久代空间不足而导致的OutOfMemoryError。
+
+然而，虽然元空间的大小理论上可以非常大，但在实际使用中，我们通常还是需要对其大小进行一定的限制，以避免过多的本地内存被占用。这就是为什么在JVM参数中，我们会看到`-XX:MetaspaceSize`和`-XX:MaxMetaspaceSize`这两个参数，它们分别用于设置元空间的初始大小和最大大小。
+
+#### “-XX:SurvivorRatio=4和-XX:TargetSurvivorRatio=70：设置新生代中Eden区与Survivor区的比例，以及Survivor区的目标使用率。” 其中具体的比例和使用率是多少
+
+`-XX:SurvivorRatio=4` 这个参数设置了新生代中Eden区与Survivor区的比例。具体来说，如果设置为4，那么Eden区与一个Survivor区的比例就是4:1。也就是说，新生代的80%（4/5）会被分配给Eden区，剩下的20%（1/5）会被分配给两个Survivor区，每个Survivor区占10%（1/10）。
+
+`-XX:TargetSurvivorRatio=70` 这个参数设置了Survivor区的目标使用率。具体来说，如果设置为70，那么在每次Minor GC后，Survivor区的使用率目标值就是70%，也就是说，Survivor区的70%的空间会被存活的对象占用，剩下的30%的空间会被空闲。
+
